test/corpus/extras.txt
================================================================================
Extras
================================================================================

[1 2; ... line continuation test
 3 4]

--------------------------------------------------------------------------------

(source_file
  (matrix_definition
    (row
      (number)
      (number))
    (comment)
    (row
      (number)
      (number))))
