test/corpus/numbers.txt
================================================================================
Number: Positive Integers
================================================================================

1
10
100

--------------------------------------------------------------------------------

(source_file
  (number)
  (number)
  (number))

================================================================================
Number: Negative Integers
================================================================================

 -1
 -10
 -100

--------------------------------------------------------------------------------

(source_file
  (unary_operator
    (operator)
    (number))
  (unary_operator
    (operator)
    (number))
  (unary_operator
    (operator)
    (number)))

================================================================================
Number: Positive Float
================================================================================

1.1
10.10
.42
42.

--------------------------------------------------------------------------------

(source_file
  (number)
  (number)
  (number)
  (number))

================================================================================
Number: Negative Float
================================================================================

-1.1
-10.10
-.42
-42.

--------------------------------------------------------------------------------

(source_file
  (unary_operator
    (operator)
    (number))
  (unary_operator
    (operator)
    (number))
  (unary_operator
    (operator)
    (number))
  (unary_operator
    (operator)
    (number)))

================================================================================
Number: Positive Scientific Notation
================================================================================

1e3
1e-3
1.e3
.1e3

--------------------------------------------------------------------------------

(source_file
  (number)
  (number)
  (number)
  (number))

================================================================================
Number: Negative Scientific Notation
================================================================================

-1e3
-1e-3
-1.e3
-.1e3

--------------------------------------------------------------------------------

(source_file
  (unary_operator
    (operator)
    (number))
  (unary_operator
    (operator)
    (number))
  (unary_operator
    (operator)
    (number))
  (unary_operator
    (operator)
    (number)))

================================================================================
Number: Positive Complex Number
================================================================================

1i
1j
1.i
1.1j
.1j
1e3j
1e-3j

--------------------------------------------------------------------------------

(source_file
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number))

================================================================================
Number: Negative Complex Number
================================================================================

-1i
-1j
-1.i
-1.1j
-.1j
-1e3j
-1e-3j

--------------------------------------------------------------------------------

(source_file
  (unary_operator
    (operator)
    (number))
  (unary_operator
    (operator)
    (number))
  (unary_operator
    (operator)
    (number))
  (unary_operator
    (operator)
    (number))
  (unary_operator
    (operator)
    (number))
  (unary_operator
    (operator)
    (number))
  (unary_operator
    (operator)
    (number)))
